removed wrong table column was brewery_id and changed with only brewery

--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -22,8 +22,8 @@
   </div>
 
   <div>
-    <%= form.label :brewery_id_id, style: "display: block" %>
-    <%= form.text_field :brewery_id_id %>
+    <%= form.label :brewery_id, style: "display: block" %>
+    <%= form.text_field :brewery_id %>
   </div>
 
   <div>
