--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,9 @@
   <body>
     <%link_to "breweries", breweries_path %>
     <%link_to "beers", beers_path %>
-    <% if not session[:user_id].nil? %>
-    <p><%= User.find(session[:user_id]).username %> signed in</p>
-  <% end %>
+    <% unless session[:user_id].nil? %>
+  <p><%=  User.find(session[:user_id]).username  %> signed in</p>
+  <%  end %>
     <%= yield %>
   </body>
 </html>
